deps/crates/vendor/tracing-attributes/tests/ui/fail/async_instrument.stderr
error[E0308]: mismatched types
 --> tests/ui/fail/async_instrument.rs:5:5
  |
5 |     ""
  |     ^^ expected `()`, found `&str`
  |
note: return type inferred to be `()` here
 --> tests/ui/fail/async_instrument.rs:4:10
  |
4 | async fn unit() {
  |          ^^^^

error[E0308]: mismatched types
  --> tests/ui/fail/async_instrument.rs:10:5
   |
10 |     ""
   |     ^^ expected `String`, found `&str`
   |
note: return type inferred to be `String` here
  --> tests/ui/fail/async_instrument.rs:9:31
   |
 9 | async fn simple_mismatch() -> String {
   |                               ^^^^^^
help: try using a conversion method
   |
10 |     "".to_string()
   |       ++++++++++++

error[E0277]: `(&str,)` doesn't implement `std::fmt::Display`
  --> tests/ui/fail/async_instrument.rs:14:57
   |
14 |   async fn opaque_unsatisfied() -> impl std::fmt::Display {
   |  _________________________________________________________-
15 | |     ("",)
16 | | }
   | | ^
   | | |
   | |_the trait `std::fmt::Display` is not implemented for `(&str,)`
   |   return type was inferred to be `(&str,)` here

error[E0277]: `(&str,)` doesn't implement `std::fmt::Display`
  --> tests/ui/fail/async_instrument.rs:14:34
   |
14 | async fn opaque_unsatisfied() -> impl std::fmt::Display {
   |                                  ^^^^^^^^^^^^^^^^^^^^^^ the trait `std::fmt::Display` is not implemented for `(&str,)`

error[E0308]: mismatched types
  --> tests/ui/fail/async_instrument.rs:22:5
   |
22 |     ""
   |     ^^ expected `Wrapper<_>`, found `&str`
   |
   = note: expected struct `Wrapper<_>`
           found reference `&'static str`
note: return type inferred to be `Wrapper<_>` here
  --> tests/ui/fail/async_instrument.rs:21:36
   |
21 | async fn mismatch_with_opaque() -> Wrapper<impl std::fmt::Display> {
   |                                    ^^^^^^^
help: try wrapping the expression in `Wrapper`
   |
22 |     Wrapper("")
   |     ++++++++  +

error[E0308]: mismatched types
  --> tests/ui/fail/async_instrument.rs:28:16
   |
28 |         return "";
   |                ^^ expected `()`, found `&str`
   |
note: return type inferred to be `()` here
  --> tests/ui/fail/async_instrument.rs:26:10
   |
26 | async fn early_return_unit() {
   |          ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/fail/async_instrument.rs:35:16
   |
35 |         return "";
   |                ^^ expected `String`, found `&str`
   |
note: return type inferred to be `String` here
  --> tests/ui/fail/async_instrument.rs:33:28
   |
33 | async fn early_return() -> String {
   |                            ^^^^^^
help: try using a conversion method
   |
35 |         return "".to_string();
   |                  ++++++++++++

error[E0308]: mismatched types
  --> tests/ui/fail/async_instrument.rs:40:1
   |
40 | #[tracing::instrument]
   | ^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `()`
41 | async fn extra_semicolon() -> i32 {
42 |     1;
   |      - help: remove this semicolon to return this value
   |
   = note: this error originates in the attribute macro `tracing::instrument` (in Nightly builds, run with -Z macro-backtrace for more info)
